tests/warn/rescue-nested-type-mismatch.jo
union AppError = NotFound | ParseError(msg: String)
union AppData = IntData(value: Int) | StrData(value: String)
type FullResult = AppData | AppError

def f(r: FullResult): AppData =
  r rescue _: AppError => ParseError("oops")
